fix: align font weights across app

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -35,12 +35,13 @@
     'Helvetica Neue',
     Arial,
     sans-serif;
-  font-weight: 500;
+  font-weight: 450;
   font-size: 1rem;
 }
 
 html[data-mode='presenter'] .notes-pane {
   text-align: center;
+  font-weight: 700;
 }
 
 .notes-pane::-webkit-scrollbar {
@@ -88,7 +89,7 @@ html[data-mode='saral'] .title > p {
 
 html[data-mode='reader'] .title > p.bold,
 html[data-mode='saral'] .title > p.bold {
-  font-weight: 230;
+  font-weight: 300;
   font-size: 1.15em;
 }
 
